--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-responsive-carousel": "^3.2.20"
+    "react-alice-carousel": "^2.5.1",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
