--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nextjs-progressbar": "^0.0.11",
     "react": "17.0.2",
     "react-alice-carousel": "^2.5.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-show-more-text": "^1.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
