--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.7.1",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
@@ -16,7 +17,9 @@
     "react": "17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "17.0.2",
-    "react-show-more-text": "^1.5.0"
+    "react-hook-form": "^7.12.2",
+    "react-show-more-text": "^1.5.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
