--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
     "react-show-more-text": "^1.5.0",
+    "swr": "^0.5.6",
     "yup": "^0.32.9"
   },
   "devDependencies": {
